--- a/style.css
+++ b/style.css
@@ -7089,3 +7089,30 @@ ul.wsp-posts-list li a {
     color: rgba(68, 68, 68, 1);
     font-size: 20px;
 }
+ol, ul {
+    list-style: none;
+}
+h2.bg span:before {
+    content: "";
+    display: block;
+    background: #FFA500;
+    width: calc(100% + 6px);
+    height: 15px;
+    z-index: -1;
+    position: absolute;
+    bottom: 6px;
+    left: -3px;
+}
+h2.bg {
+    color: #1e1e1d;
+    font-size: 44px !important;
+    font-weight: 600 !important;
+    font-style: italic;
+    line-height: 48px !important;
+    z-index: 0;
+}
+@media (max-width: 991px) {
+h2.bg {
+    font-size: 40px !important;
+}
+}
