--- a/style2.css
+++ b/style2.css
@@ -7009,5 +7009,57 @@ ul.wsp-posts-list li a {
     line-height: 85px;
     margin: 0 0 0 20px;
     color: #444;
-    font-size: 20px
+    font-size: 20px;
+}
+
+img.lazy {
+    min-height: 1px;
+}
+.wpremark p{
+    margin:.75em 0
+}
+.wpremark p:first-child{
+    margin-top:0;
+}
+.wpremark p:last-child{
+    margin-bottom:0;
+}
+.wpremark .wpremark-body{
+    width:100%;
+    max-width:100%;
+    align-self:center;
+}
+.wpremark .wpremark-icon img,
+.wpremark .wpremark-icon svg{
+    display:block;
+    max-width:100%;
+    max-height:100%;
+}
+:root{
+    --swiper-theme-color:#edae07;
+}
+.works{
+    max-width:500px;
+}
+.swiper-slide{
+    height:500px;
+}
+.swiper-slide>img.lazy.loaded{
+    object-fit:contain;
+    height:100%;
+    object-position:center;
+    width:100%;
+}
+@media (max-width:1199px){
+    .header-whatsapp,
+    .header-whatsapp:hover{
+        background-position:20px;
+        padding-left:30px;
+    }
+    .m-whatsapp:hover,
+    .s12 .m-whatsapp,
+    .s12 .m-whatsapp:hover{
+        background-position:15px;
+        padding-left:50px;
+    }
 }
